<resources>
    <string name="app_name">PianoGrupo02</string>
    <string name="informacion">Info</string>
    <string name="cerrar">cerrar</string>
    <string name="piano_instrumentos">Piano Instrumentos</string>
    <string name="piano_selvatico">Piano Selvatico</string>
    <string name="piano_tradicional">Piano tradicional</string>
    <string name="aplicacioninfotext1">Esta aplicación fue construida por:</string>
    <string name="bryan_alberto_v_squez_farf_n">Bryan Alberto Vásquez Farfán</string>
    <string name="andy_william_guevara_roldan">Andy William Guevara Roldan</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="esta_aplicaci_n_fue_construida_para_el_parcial_del_segundo_periodo">Esta aplicación fue construida para el parcial del segundo periodo.</string>
    <string name="donote">DO</string>
    <string name="re">RE</string>
    <string name="mi">MI</string>
    <string name="fa">FA</string>
    <string name="sol">SOL</string>
    <string name="la">LA</string>
    <string name="si">SI</string>
    <string name="piano_selv_tico">Piano Selvático</string>
    <string name="press">.</string>
    <string name="toca_un_animal_y_se_reproducir_su_sonido">Toca un animal y se reproducirá su sonido.</string>
</resources>
