<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".Info">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="253dp"
        android:layout_height="198dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="81dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/bryan"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="294dp"
        android:text="@string/aplicacioninfotext1"
        android:textColor="#5BA11C"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="73dp"
        android:text="@string/bryan_alberto_v_squez_farf_n"
        android:textColor="#100F0F"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="71dp"
        android:text="@string/andy_william_guevara_roldan"
        android:textColor="#101010"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="DuplicateIds,MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:text="@string/esta_aplicaci_n_fue_construida_para_el_parcial_del_segundo_periodo"
        android:textAlignment="center"
        android:textColor="#151515"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateIds,MissingConstraints,TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="180dp"
        android:layout_height="0dp"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="132dp"
        android:contentDescription="@string/todo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/andy"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>