<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pianoselvatico"
    tools:context=".PianoSelvatico">

    <Button
        android:id="@+id/button8"
        android:layout_width="83dp"
        android:layout_height="228dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/serpiente"
        android:onClick="serpiente"
        android:text="@string/press"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,TextSizeCheck" />

    <Button
        android:id="@+id/button10"
        android:layout_width="86dp"
        android:layout_height="233dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="14dp"
        android:background="@drawable/tigre"
        android:onClick="tigre"
        android:text="@string/press"
        android:textColor="#673AB7"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button11"
        android:layout_width="79dp"
        android:layout_height="230dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/mono"
        android:onClick="mono"
        android:text="@string/press"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintStart_toEndOf="@+id/button10"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="85dp"
        android:layout_height="226dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/mapache"
        android:onClick="mapache"
        android:text="@string/press"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button13"
        app:layout_constraintStart_toEndOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button13"
        android:layout_width="86dp"
        android:layout_height="237dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="13dp"
        android:background="@drawable/cocodrilo"
        android:onClick="cocodrilo"
        android:text="@string/press"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintStart_toEndOf="@+id/button12"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="84dp"
        android:layout_height="227dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="189dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/oso"
        android:onClick="oso"
        android:text="@string/press"
        android:textColor="#90CAF9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintStart_toEndOf="@+id/button13"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button15"
        android:layout_width="81dp"
        android:layout_height="225dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="21dp"
        android:background="@drawable/elefante"
        android:onClick="elefante"
        android:text="@string/press"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button14"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="281dp"
        android:layout_marginTop="89dp"
        android:layout_marginEnd="392dp"
        android:layout_marginBottom="77dp"
        android:text="@string/piano_selv_tico"
        android:textColor="#EFF1EF"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="228dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="201dp"
        android:layout_marginBottom="20dp"
        android:text="@string/toca_un_animal_y_se_reproducir_su_sonido"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>